2011-03-05 20:52  paddockd

	* [r242] ChangeLog, contrib/makefile.linux24-ffmpeg-alsa-display,
	  src/slimaudio/slimaudio_decoder_wma.c: Fixed occasional crashes
	  during track changes.

2011-03-05 11:29  paddockd

	* [r241] ChangeLog, TODO,
	  contrib/makefile.linux24-ffmpeg-alsa-display,
	  src/slimaudio/slimaudio_decoder_wma.c: Initial support for native
	  wmav1 and wmav2 decoder on linux little endian hardware.

2011-02-26 19:41  paddockd

	* [r240] ChangeLog, contrib/makefile.freebsd-sparc64,
	  contrib/makefile.linux24-ffmpeg-alsa-display,
	  contrib/makefile.linux24-nofpu-alsa-display,
	  contrib/makefile.linux26-armel-alsa,
	  contrib/makefile.linux26-armel-nofpu-alsa-display,
	  contrib/makefile.linux26-mipsel-nofpu-alsa,
	  contrib/makefile.linux26-nofpu-alsa-display,
	  contrib/makefile.linux26-ppc-alsa-display,
	  contrib/makefile.mingw32-ffmpeg-display,
	  makefile.linux24-alsa-display, makefile.osx-i64-display,
	  makefile.osx-intel-display, makefile.osx-ppc-display: Updated
	  lnx24, osx and contrib makefiles to PA DEV r1608.

2011-02-26 13:59  paddockd

	* [r239] ChangeLog, TODO, makefile.linux26-alsa-display,
	  makefile.linux26-i64-alsa-display, makefile.mingw32-asio-display,
	  makefile.mingw32-display, makefile.mingw32-wasapi-display,
	  patches/build-portaudio-alsa-badstate.patch,
	  patches/build-portaudio-wasapi-ringbuf.patch,
	  scripts/createpaexp, sources/portaudio-r1608.tar.gz,
	  src/squeezeslave/squeezeslave.c: Updated lnx26 and windows
	  makefiles to PA DEV r1608.
	  Removed patches from libportaudio export creation script.
	  Updated wasapi ringbuffer patch for latest PA DEV.
	  Updated alsa badstate patch for latest PA DEV.
	  Increased version to 239.

2011-02-19 13:54  paddockd

	* [r238] ChangeLog, TODO,
	  contrib/makefile.linux26-armel-nofpu-alsa-display,
	  contrib/makefile.linux26-armel-nofpu-oss-display: Added
	  squeezeplug armel OSS makefile.

2011-02-17 14:57  paddockd
