@@ -1,3 +1,57 @@
+---
+
+Fix memory leak(s) in wma decoder
+
+---
+
+    /* decode until eof */
+    avpkt.data = inbuf;
+    for(;;) {
+        avpkt.size = fread(inbuf, 1, INBUF_SIZE, f);
+        if (avpkt.size == 0)
+            break;
+
+        avpkt.data = inbuf;
+        while (avpkt.size > 0) {
+            out_size = AVCODEC_MAX_AUDIO_FRAME_SIZE;
+            len = avcodec_decode_audio3(c, (short *)outbuf, &out_size, &avpkt);
+            if (len < 0) {
+                fprintf(stderr, "Error while decoding\n");
+                exit(1);
+            }
+            if (out_size > 0) {
+                /* if a frame has been decoded, output it */
+                fwrite(outbuf, 1, out_size, outfile);
+            }
+            avpkt.size -= len;
+            avpkt.data += len;
+        }
+    }
+
+Well, it seems that the problem wasn't in the parameters to 
+av_audio_resample_init(), but in audio_resample(). In my program it looked like 
+this:
+
+unsigned char pcm[AVCODEC_MAX_AUDIO_FRAME_SIZE];
+int cb = sizeof(pcm);
+avcodec_decode_audio3(ctx_.get(), (short *)pcm, &cb, &packet_);
+// <...>
+unsigned char pcm2[AVCODEC_MAX_AUDIO_FRAME_SIZE];
+audio_resample(resampleCtx, (short *)pcm2, (short *)pcm, cb / 4);
+
+I assumed that "cb" is in bytes, and every sample is 4 bytes - thus passed cb/4 
+to audio_resample(), and this resulted in crackles/hum.
+If I change it to cb/2 -- everything sounds ok.
+
+Right, it's "number of samples", so in this case bytes / sizeof(float).
+
+I thought that SAMPLE_FMT_FLT designates 4-byte float.
+At least, when I treated the original non-resampled sound as SAMPLE_FMT_S32, 
+there was some reasonable sound (with a lot of noise), while SAMPLE_FMT_S16 
+didn't produce anything but noise...
+
+---
+
 URL: http://libav-users.943685.n4.nabble.com/av-open-input-stream-Failing-tp2715548p2718835.html
 
 I have figured out the problem.
